// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox renders correctly 1`] = `
<label>
  <input
    checked={false}
    style={
      Object {
        "marginLeft": 0,
      }
    }
    type="checkbox"
  />
</label>
`;

exports[`Checkbox renders correctly with all props 1`] = `
<label>
  <input
    checked={true}
    name="test-checkbox"
    onChange={[Function]}
    style={
      Object {
        "marginLeft": 0,
      }
    }
    type="checkbox"
  />
  awesome checkbox
</label>
`;
